Corrected errors with vertical-align. Page now displays External_links side by side with main_content.

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,31 +1,29 @@
-
-#main_content{
-  width: 100%;/*DTT*/
-/*  float: right;*/  
-  min-width: 40%;
-  padding-left: 500px;
-  display: 'vertical-align';
-}
 body {
-  max-width: 960px;/*DTT*/
+  max-width:960px;
 }
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
   margin-left: 0px;
 }
-
 cite {
-  /*display: block;*/
+  display: block;
   margin-top: 10px;
 }
-
+main {
+  width: 50%;
+  display: inline-block;
+}
 #external-links {
-  width:100%;/*DTT*/
-  /*list-style-type: disc;  */
-/*  min-width: 30%;*/
-  /*float: left;*/
-  display: 'vertical-align';
+  width: 10%;
+  display: inline-block;
+  min-width: 20%;
+  vertical-align: top; /*by default they vertically align to the bottom.*/ 
+}
+#external-links ul {
+  list-style-type: none;
+  padding-left: 20px;
+  padding-right: 40px;
 }
 
 /* you're welcome to edit the
@@ -44,8 +42,8 @@ figcaption {
   font-style: italic;
   text-align: right;
 }
-@media only screen and (max-width: 500px) {
-    body {
-        background-color: lightblue;
-    }
+@media screen and (max-width: 500px) {
+  body {
+    background-color: hotpink;
+  }
 }
